Added screenshots from application, updated README